# STimage

./: .gitignore  LICENSE  README.md  example.ini  example_dataset_meta.csv  pyproject.toml  requirements.txt  stimage_env.yml
Figure_scripts/Figure2/: CNN_NB.ipynb  Figure2_abc.ipynb  Figure2_d.ipynb
Figure_scripts/Figure3/: Figure3_c.ipynb  Figure3_uncertainty.ipynb
Spatial_Transcriptomics/: 0013img.tif  Allen_STimage_10X.ipynb  CNN_BreastCancer10X.ipynb  Cell_line.ipynb  GeneExpression_Pred.ipynb  Gene_Selection_Cancer_vs_Non-Cancer.ipynb  INFO.md  Image_Clustering.ipynb  Model-LIME-Bayesian-CapsuleNet.ipynb  NanoString_SCC.ipynb  Notes_Paper.docx  Scanpy.ipynb
Streamlit_web-app/: STimage-web_app.py  STimage-web_app_v2.py
Tutorials/: 01_train_model.ipynb  03_Xenium_cell_type_prediction.ipynb
development/: CNN_NB_alex_cancer_immune.ipynb  CNN_NB_alex_uncertainty.ipynb  CNN_NB_train.py  Figure2.ipynb  Gene_enrichment_prediction.ipynb  Hist2ST_test.ipynb  LSTM_10x_breast_cancer.ipynb  LSTM_NB_autocorrelation.ipynb  NB_classification_LIME.ipynb  NB_spatial_autocorrelation-Copy1.ipynb  NB_spatial_autocorrelation.ipynb  Plot_TCGA_pred.ipynb  Regression_Model_Interpretation.ipynb  SHAP.ipynb  STimage_Bayes_regression_prediction-100epochs.ipynb  STimage_Bayes_regression_prediction-rev2.ipynb  STimage_Bayes_regression_prediction.ipynb  STimage_Bayes_regression_prediction_.ipynb  STimage_Bayes_regression_training.ipynb  STimage_Classification_Multi_Patient.py  STimage_Interpretability_Classification.py  STimage_Interpretability_Regression.py  STimage_compare_with_histogene.ipynb  VAE.ipynb  VAE_clean.ipynb  ViT_NB.ipynb  ZNIB_STnet_data.ipynb  benchmarking_LOU_9visium.ipynb  benchmarking_OOD.ipynb  breast_cancer_FFPE.ipynb  bunya_test.ipynb  bunya_test_cuda.ipynb  check_visium_st_com_gene.ipynb  ensemble_training.py  evidential_model.ipynb  gene_prediction_cnn_zinb_oldST_TBI_trainable.ipynb  gene_prediction_nb.ipynb  generate_blake_dataset.ipynb  generate_dataset.ipynb  generate_kidney_v_dataset.ipynb  (+23 more)
idea/: README.md
paper/: README.md
stimage/: 01_Preprocessing.py  02_Training.py  03_Prediction.py  04_Interpretation.py  05_Visualisation.py  06_Predict_external.py  CNN_Gene-Expression.ipynb  GeneExpression_Pred.ipynb  __about__.py  _data_generator.py  _img_normaliser.py  _imgaug.py  _model.py  _utils.py  data_generator.py  imgaug.py  model.py  train.py  utils.py
(+132 files in other folders)
